# edge-impulse-to-wasm-compiler

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  model.onnx  requirements.txt
flask/app/: SETUP.py  __main__.py  app.py  settings.py  utils.py
flask/static/: styles.css
flask/templates/: file_structure.html  index.html  index2.html  index3.html
modules/: Cargo.toml
modules/rust_spectral_analysis/: Cargo.toml
modules/rust_spectral_analysis/src/: lib.rs
modules/save_accelerometer_data/: Cargo.toml
modules/save_accelerometer_data/src/: lib.rs
modules/wasi_edge_impulse_onnx/: Cargo.toml
modules/wasi_edge_impulse_onnx/src/: lib.rs
modules/wasm3_api/: Cargo.toml
modules/wasm3_api/src/: lib.rs
python_scripts/: convert_to_onnx.py  download_model.py
rust_spectral_analysis/: Cargo.toml
rust_spectral_analysis/src/: lib.rs  main.rs
valmis/app/: app.py
valmis/templates/: index.html  send_request.html
wasi_edge_impulse_onnx/: Cargo.toml  accelerometer_data.csv  edge-impulse-model.onnx  open-api-description.json  wit
wasi_edge_impulse_onnx/src/: lib.rs
