[package]
name = "save_accelerometer_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm3_api = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
strip = true
lto = "fat"
codegen-units = 1