[package]
name = "wasi_edge_impulse_onnx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tract-onnx = "0.21.7"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
strip = true
lto = "fat"
codegen-units = 1